# mcp-imdb

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/mcp_imdb/: sse_server.py  tools.py
tests/: test_tools.py
