[project]
name = "mcp-imdb"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for accessing IMDB data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.0",
    "starlette>=0.30.0",
    "uvicorn>=0.30.0",
    "cinemagoer>=2023.5.1",
    "websockets>=12.0",
]
[[project.authors]]
name = "Cheng-Lung Sung"
email = "clsung@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-imdb = "mcp_imdb:main"
mcp-imdb-sse = "mcp_imdb.sse_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
